pgcenter (0.6.2) unstable; urgency=low
  * avoid rude disconnection from postgres at top-program exit

pgcenter (0.6.1) unstable; urgency=low
  * improved aligning and query truncation
    - record: records complete length of pg_stat_statements.query (be careful, it might produce high-volume stats file)
    - record: add startup paramter for configuring truncation
    - report: can use '--truncate 0', for disabling trucation only for pg_stat_statements.query (might produce an "eyes-bleeding" output)
  * reworked pg_stat_statements queries: 
    - remove unnecessary GROUP BY, ORDER BY and aggregations
    - simplify usage of regexp_replace()
    - use pg_get_userbyid() instead of joining pg_roles view
    - use configurable limit for truncating length of queries
  * top: read remote stats only if pgcenter schma is available
  * top: do polling pg_stat_statements only if it's available (issue #59)
  * top: fixed handling of libpq errors during connection establishment (issue #58)
  * top: fix srong assebling of path to logfile (issue #55)

pgcenter (0.6.0) unstable; urgency=low
  * added goreleser support
  * top: fix wrong handling of group cancel/terminate mask
  * implemented GoReport recommendations
  * profile: emit error if '-P' is not specified
  * config: emit error if neither '-i' nor '-u' specified
  * config: moved parameters check from main program code to command management code
  * some refactoring in connection handling code
  * add wait events profiling feature
  * lib/stat: fix wrong calculation of hits values
  * report: extend built-in help about supported statistics
  * lib/utils/postgres: use lib/pq default settings for SSL
  * report: show last processed stats file on error
  * return of the Changelog!
  * output aligning rewritten

 -- Alexey Lesovsky <lesovsky@gmail.com>  Sun, 2 Oct 2017 12:00:00 +0500

pgcenter (0.5.0) unstable; urgency=low

  * pgcenter rewritten using Golang
  * sub-commands have been implemented